--- a/Backend/Backend/src/main/resources/application.properties
+++ b/Backend/Backend/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.jpa.database=mysql
 
 #server configuration
 server.port=8080
-server.servlet.context-path=/Back_End
+server.servlet.context-path=/app
